vlib/v/parser/tests/generic_struct_type_using_multi_return_err.vv
struct Tuple<T> {
	data T
}

fn main() {
	sample := Tuple<(int, int)>{}
	println(sample)
}
